--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "uniqid": "^5.3.0"
   },
   "devDependencies": {},
   "keywords": [],
